#Nmap Changelog ($Id$); -*-text-*-

o [NSE][GH#1611] Address two protocol parsing issues in rdp-enum-encryption and
  the RDP nse library which broke scanning of Windows XP. Clarify protocol
  types [Tom Sellers]

o [NSE][GH#1608] Script http-fileupload-exploiter failed to locate its resource
  file unless executed from a specific working directory. [nnposter]

o [NSE][GH#1571] The HTTP library now provides transparent support for gzip-
  encoded response body. (See https://github.com/nmap/nmap/pull/1571 for an
  overview.) [nnposter]

o [NSE][GH#1571] The HTTP library is now enforcing a size limit on the received
  response body. The default limit can be adjusted with a script argument,
  which applies to all scripts, and can be overridden case-by-case with an HTTP
  request option. (See https://github.com/nmap/nmap/pull/1571 for details.)
  [nnposter]

o [Nsock][Ncat][GH#1075] Add AF_VSOCK (Linux VM sockets) functionality to Nsock
  and Ncat. VM sockets are used for communication between virtual machines and
  the hypervisor. [Stefan Hajnoczi]

o [NSE][GH#1467] Avoid clobbering the "severity" and "ignore_404" values of
  fingerprints in http-enum. None of the standard fingerprints uses these
  fields. [Kostas Milonas]

o [NSE][GH#1077] Fix a crash caused by a double-free of libssh2 session data
  when running SSH NSE scripts against non-SSH services. [Seth Randall]

o [NSE][GH#1565] Updates the execution rule of the mongodb scripts to be able
  to run on alternate ports. [Paulino Calderon]

o [Ncat][GH#1560] Allow Ncat to connect to servers on port 0, provided that the
  socket implementation allows this. [Daniel Miller]

o Update the included libpcap to 1.9.0. [Daniel Miller]

o [NSE][GH#1544] Fix a logic error that resulted in scripts not honoring the
  smbdomain script-arg when the target provided a domain in the NTLM challenge.
  [Daniel Miller]

o [Nsock][GH#1543] Avoid a crash (Protocol not supported) caused by trying to